startup-drawio/drawio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: drawio
  name: drawio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: drawio
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/drawio-default: "true"
        io.kompose.service: drawio
    spec:
      containers:
        - name: drawio
          image: jgraph/drawio:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: startup-drawio-data
            - mountPath: /config
              name: startup-drawio-config
      restartPolicy: Always
      volumes:
        - name: startup-drawio-data
          persistentVolumeClaim:
            claimName: startup-drawio-data-pvc
        - name: startup-drawio-config
          persistentVolumeClaim:
            claimName: startup-drawio-config-pvc
