startup-drawio/drawio-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.266.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: drawio
  name: drawio
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: drawio
status:
  loadBalancer: {}
